# nfcpy_mynacard

./: LICENSE  README.md  pyproject.toml
docs/: quickstart.md
examples/: output_certificate.py  sign_file.py
examples/input_assistance/: get_four_attrs.py  get_mynumber.py
examples/jpki/: output_certificate.py  sign_file.py
nfcpy_mynacard/: __init__.py  card.py  error.py  input_assistance.py  jpki.py  login.py
